# NovaAI-

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: ARCHITECTURE.md
docs/images/: README.md
src/nova/: __init__.py  __main__.py  context.py  main.py
src/nova/ai/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  registry.py  schemas.py
src/nova/api/: __init__.py  app.py  deps.py  schemas.py
src/nova/api/routes/: __init__.py  chat.py  commands.py  health.py  home.py  memory.py  plugins.py  voice.py  web.py
src/nova/commands/: __init__.py  base.py  registry.py
src/nova/core/: __init__.py  config.py  events.py  exceptions.py  logging.py
src/nova/memory/: __init__.py  base.py  manager.py  models.py
src/nova/memory/backends/: __init__.py  json_store.py
src/nova/plugins/: __init__.py  base.py  manager.py
src/nova/plugins/builtin/: __init__.py  hello.py  reminders.py  system_control.py
src/nova/voice/: __init__.py  base.py  manager.py  stt.py  tts.py
tests/: conftest.py  test_ai.py  test_commands.py  test_config.py  test_health.py  test_memory.py  test_plugins.py  test_reminders.py  test_system_control.py  test_voice.py  test_web.py
